--- a/vuehr_v3/package.json
+++ b/vuehr_v3/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
+    "sass": "^1.27.1",
+    "sass-loader": "^10.0.4",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
